Infrastructure/kubernetes/base/frontpage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontpage
  labels:
    app: frontpage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontpage
  template:
    metadata:
      labels:
        app: frontpage
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 101
        fsGroup: 101
      containers:
      - name: frontpage
        image: villejuhan1/frontpage:stable
        ports:
        - containerPort: 80
        securityContext:
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 64Mi
        volumeMounts:
          - name: tmp
            mountPath: /tmp
          - name: cache
            mountPath: /var/cache/nginx
          - name: run
            mountPath: /var/run
      volumes:
        - name: tmp
          emptyDir: {}
        - name: cache
          emptyDir: {}
        - name: run
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: frontpage
spec:
  selector:
    app: frontpage
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontpage-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - example-front.com # Replaced with Kustomize
    secretName: frontpage-tls
  rules:
  - host: example-front.com # Replaced with Kustomize
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontpage
            port:
              number: 80
